[web] [fix] align unread buttons
Summary: there isn't a design for unread button, but I'd assume we would want to align the buttons across the board.

Test Plan: make sure buttons are aligned. (three dot vertical buttons)

Reviewers: atul, def-au1t, palys-swm

Reviewed By: palys-swm

Subscribers: ashoat, palys-swm, Adrian, karol-bisztyga

Differential Revision: https://phabricator.ashoat.com/D3441

--- a/web/chat/chat-thread-list-item-menu.css
+++ b/web/chat/chat-thread-list-item-menu.css
@@ -44,6 +44,10 @@ div.sidebar:hover .menu {
   display: block;
 }
 
+.menuSidebar {
+  padding-right: 2px;
+}
+
 button.menuContent {
   border: none;
   cursor: pointer;
